--- a/src/main/resources/fhj/swengb/assignments/ttt/TicTacToeApp.fxml
+++ b/src/main/resources/fhj/swengb/assignments/ttt/TicTacToeApp.fxml
@@ -1,1 +1,62 @@
-<!-- here goes your fxml -->
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <GridPane prefHeight="82.0" prefWidth="240.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button mnemonicParsing="false" onMouseClicked="#field2Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="1" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#field3Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="2" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#field4Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.rowIndex="1" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#field5Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#field6Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button layoutX="10.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#field7Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.rowIndex="2" />
+            <Button layoutX="10.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#field8Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button layoutX="10.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#field9Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button layoutX="10.0" layoutY="96.0" mnemonicParsing="false" onMouseClicked="#field1Clicked" prefHeight="148.0" prefWidth="215.0" text="Button" />
+         </children>
+      </GridPane>
+   </center>
+   <top>
+      <Label prefHeight="43.0" prefWidth="120.0" text="Tic Tac Toe" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+   </top>
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="69.0" prefWidth="122.0" style="-fx-background-color: green; -fx-border-color: white;" text="1 vs 1">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="116.0" style="-fx-background-color: green; -fx-border-color: white;" text="1 vs PC">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="96.0" style="-fx-background-color: red; -fx-border-color: white;" text="Reset">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
+</BorderPane>
